--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -480,7 +480,7 @@ To maximize result reproducibility, all the pretrained models and code were down
 
 The pretrained UMX-HQ model\footnote{\url{https://zenodo.org/record/3370489}} was one of the 3 compared neural networks as shown in table \ref{table:bsseval} in section \ref{sec:demixresults}. The weights are for a PyTorch model, and it was only trained on MUSDB18-HQ. The size on disk of the model weights for the 4 targets combined is 137 MB.
 
-The pretrained X-UMX model\footnote{\url{https://nnabla.org/pretrained-models/ai-research-code/x-umx/x-umx.h5}} is for the NNabla (\cite{nnabla}) deep learning framework. The file containing trained weights for the combined 4 targets is 136 MB, almost the same as the size of the UMX PyTorch weights.
+The pretrained X-UMX model\footnote{\url{https://nnabla.org/pretrained-models/ai-research-code/x-umx/x-umx.h5}} is for the NNabla deep learning framework. The file containing trained weights for the combined 4 targets is 136 MB, almost the same as the size of the UMX PyTorch weights.
 
 The pretrained xumx-sliCQ model\footnote{\url{https://github.com/sevagh/xumx-sliCQ/tree/main/pretrained-model}} is 28 MB, making xumx-sliCQ the smallest network from the comparison.
 
