--- a/latex/report_ch2.tex
+++ b/latex/report_ch2.tex
@@ -89,7 +89,7 @@
 
 %\newpagefill
 %
-%\subfile{ch0_abstract_acknowledgement.tex}
+%\subfile{ch0.tex}
 
 \newpagefill
 
@@ -103,24 +103,24 @@
 
 \newpagefill
 
-%\subfile{ch1_introduction.tex}
+%\subfile{ch1.tex}
 %
 %\newpagefill
 
 \setcounter{section}{1}
-\subfile{ch2_background.tex}
+\subfile{ch2.tex}
 
 \newpagefill
 %
-%\subfile{ch3_methodology.tex}
+%\subfile{ch3.tex}
 %
 %\newpagefill
 %
-%\subfile{ch4_experiment.tex}
+%\subfile{ch4.tex}
 %
 %\newpagefill
 %
-%\subfile{ch5_conclusion.tex}
+%\subfile{ch5.tex}
 %
 %\newpagefill
 
