--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -19,90 +19,6 @@ pages = {297--301},
 doi = {10.1090/S0025-5718-1965-0178586-1},
 }
 
-@article{fftw1,
-	author={Frigo, Mattero and Steven G. Johnson},
-	journal={Proceedings of the IEEE},
-       	title={The Design and Implementation of FFTW3},
-	year={2005},
-	volume={93},
-	number={2},
-	pages={216--231},
-	doi={10.1109/JPROC.2004.840301}
-}
-
-@incollection{fftw2,
-  author      = {Steven G. Johnson and Mattero Frigo},
-  title       = {Implementing FFTs in Practice},
-  editor      = {Charles S. Burrus},
-  booktitle   = {Fast Fourier Transforms},
-  publisher   = {Connexions: Rice University},
-  address     = {Oxford},
-  year        = {2012},
-  chapter     = {11},
-  url = {http://cnx.org/content/m16336/latest/}
-}
-
-@techreport{ipp,
-author = {Umberto Santoni and Thomas Long},
-title = {Signal Processing on Intel® Architecture: Performance Analysis using Intel® Performance Primitives},
-institution = {Intel},
-url = {https://www.intel.com/content/dam/doc/white-paper/signal-processing-on-intel-architecture.pdf}
-}
-
-@techreport{cufft,
-title = {cuFFT},
-institution = {NVIDIA},
-url = {https://developer.nvidia.com/cufft}}
-
-@techreport{ne10,
-title = {Project Ne10: An Open Optimized Software Library Project for the Arm Architecture},
-url = {https://projectne10.github.io/Ne10/}}
-
-@article{numpy,
- title         = {Array programming with {NumPy}},
- author        = {Charles R. Harris and K. Jarrod Millman and St{'{e}}fan J.
-                 van der Walt and Ralf Gommers and Pauli Virtanen and David
-                 Cournapeau and Eric Wieser and Julian Taylor and Sebastian
-                 Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
-                 and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
-                 Brett and Allan Haldane and Jaime Fern{'{a}}ndez del
-                 R{'{\i}}o and Mark Wiebe and Pearu Peterson and Pierre
-                 G{'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
-                 Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
-                 Travis E. Oliphant},
- year          = {2020},
- journal       = {Nature},
- volume        = {585},
- number        = {7825},
- pages         = {357--362},
- doi           = {10.1038/s41586-020-2649-2},
- publisher     = {Springer Science and Business Media {LLC}},
- url           = {https://doi.org/10.1038/s41586-020-2649-2}
-}
-
-@article{scipy,
-  author  = {Virtanen, Pauli and Gommers, Ralf and Oliphant, Travis E. and
-            Haberland, Matt and Reddy, Tyler and Cournapeau, David and
-            Burovski, Evgeni and Peterson, Pearu and Weckesser, Warren and
-            Bright, Jonathan and {van der Walt}, St{\'e}fan J. and
-            Brett, Matthew and Wilson, Joshua and Millman, K. Jarrod and
-            Mayorov, Nikolay and Nelson, Andrew R. J. and Jones, Eric and
-            Kern, Robert and Larson, Eric and Carey, C J and
-            Polat, {\.I}lhan and Feng, Yu and Moore, Eric W. and
-            {VanderPlas}, Jake and Laxalde, Denis and Perktold, Josef and
-            Cimrman, Robert and Henriksen, Ian and Quintero, E. A. and
-            Harris, Charles R. and Archibald, Anne M. and
-            Ribeiro, Ant{\^o}nio H. and Pedregosa, Fabian and
-            {van Mulbregt}, Paul and {SciPy 1.0 Contributors}},
-  title   = {{{SciPy} 1.0: Fundamental Algorithms for Scientific
-            Computing in Python}},
-  journal = {Nature Methods},
-  year    = {2020},
-  volume  = {17},
-  pages   = {261--272},
-  doi     = {10.1038/s41592-019-0686-2},
-}
-
 @book{melbook,
 author = {Rabiner, Lawrence and Schafer, Ronald},
 title = {Theory and Applications of Digital Speech Processing},
@@ -160,27 +76,6 @@ doi = {10.1121/1.5091778}
   year={2006}
 }
 
-@article{jbrown,
-  title={Calculation of a constant Q spectral transform},
-  author={Judith Brown},
-  journal={Journal of the Acoustical Society of America},
-  year={1991},
-  volume={89},
-  pages={425-434},
-  url={https://www.ee.columbia.edu/~dpwe/papers/Brown91-cqt.pdf}
-}
-
-@article{balazs,
-author = {Balazs, Peter and Doerfler, Monika and Jaillet, F and Holighaus, Nicki and Velasco, Gino Angelo},
-year = {2011},
-pages = {1481-1496},
-title = {Theory, implementation and applications of nonstationary Gabor frames},
-volume = {236},
-journal = {Journal of Computational and Applied Mathematics},
-doi = {10.1016/j.cam.2011.09.011},
-url = {https://ltfat.github.io/notes/ltfatnote018.pdf}
-}
-
 @misc{invertiblecqt,
 url = {https://www.univie.ac.at/nonstatgab/pdf_files/dohogrve11_amsart.pdf},
 author = {Velasco, Gino Angelo and Holighaus, Nicki and Doerfler, Monika and Grill, Thomas},
@@ -205,50 +100,12 @@ volume = {1},
 journal = {Audio Engineering Society - 120th Convention Spring Preprints 2006}
 }
 
-@inproceedings{librosa,
-author = {McFee, Brian and Raffel, Colin and Liang, Dawen and Ellis, Daniel and Mcvicar, Matt and Battenberg, Eric and Nieto, Oriol},
-year = {2015},
-pages = {18-24},
-title = {librosa: Audio and Music Signal Analysis in Python},
-doi = {10.25080/Majora-7b98e3ed-003}
-}
-
-@article{musicsepgood,
-author = {Cano, Estefanía and Fitzgerald, Derry and Liutkus, Antoine and Plumbley, Mark and Stöter, Fabian-Robert},
-year = {2018},
-title = {Musical Source Separation: An Introduction},
-volume = {36},
-journal = {IEEE Signal Processing Magazine},
-doi = {10.1109/MSP.2018.2874719}
-}
-
 @article{fitzgerald1,
 author = {Fitzgerald, Derry},
 year = {2010},
 title = {Harmonic/Percussive Separation using Median Filtering},
 journal = {13th International Conference on Digital Audio Effects (DAFx-10)},
 url = {http://dafx10.iem.at/papers/DerryFitzGerald_DAFx10_P15.pdf}
-}
-
-@article{fitzgerald2,
-author = {Fitzgerald, Derry and Gainza, Mikel},
-year = {2010},
-title = {Single Channel Vocal Separation using Median Filtering and Factorisation Techniques},
-volume = {4},
-journal = {ISAST Transactions on Electronic and Signal Processing}
-}
-
-@incollection{ltfat,
-    year={2014},
-    isbn={978-3-319-12975-4},
-    booktitle={Sound, Music, and Motion},
-    series={Lecture Notes in Computer Science},
-    editor={Aramaki, Mitsuko and Derrien, Olivier and Kronland-Martinet, Richard and Ystad, S{\o}lvi},
-    title={{The Large Time-Frequency Analysis Toolbox 2.0}},
-    publisher={Springer International Publishing},
-    author={Pr\r{u}\v{s}a, Zden\v{e}k and S{\o}ndergaard, Peter L. and Holighaus, Nicki and Wiesmeyr, Christoph and Balazs, Peter},
-    pages={419-442},
-    doi={{10.1007/978-3-319-12976-1_25}},
 }
 
 @misc{musdb18,
@@ -260,40 +117,6 @@ journal = {ISAST Transactions on Electronic and Signal Processing}
   title        = {The {MUSDB18} corpus for music separation},
   year         = {2017},
   doi          = {10.5281/zenodo.1117372},
-}
-
-@misc{musdb18hq,
-  author       = {Rafii, Zafar and
-                  Liutkus, Antoine and
-                  Stöter, Fabian-Robert and
-                  Mimilakis, Stylianos Ioannis and
-                  Bittner, Rachel},
-  title        = {MUSDB18-HQ - an uncompressed version of MUSDB18},
-  year         = {2019},
-  doi          = {10.5281/zenodo.3338373},
-}
-
-@article{bss,
-author = {Vincent, Emmanuel and Gribonval, Rémi and Févotte, Cédric},
-year = {2006},
-pages = {1462 - 1469},
-title = {Performance measurement in blind audio source separation},
-volume = {14},
-journal = {Audio, Speech, and Language Processing, IEEE Transactions on},
-doi = {10.1109/TSA.2005.858005}
-}
-
-@article{umx,
-  doi = {10.21105/joss.01667},
-  year = {2019},
-  publisher = {The Open Journal},
-  volume = {4},
-  number = {41},
-  pages = {1667},
-  author = {Fabian-Robert Stöter and Stefan Uhlich and Antoine Liutkus and Yuki Mitsufuji},
-  title = {Open-Unmix - A Reference Implementation for Music Source Separation},
-  journal = {Journal of Open Source Software},
-  url = {https://hal.inria.fr/hal-02293689/document}
 }
 
 @inbook{masking,
@@ -316,15 +139,6 @@ journal = {Signal Processing},
 doi = {10.1016/j.sigpro.2007.01.016}
 }
 
-@misc{sisec2018,
-      title={The 2018 Signal Separation Evaluation Campaign}, 
-      author={Fabian-Robert Stöter and Antoine Liutkus and Nobutaka Ito},
-      year={2018},
-      eprint={1804.06267},
-      archivePrefix={arXiv},
-      primaryClass={eess.AS}
-}
-
 @inproceedings{transientsep,
 author={J. {Janer} and R. {Marxer} and K. {Arimoto}},
 booktitle={2012 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
@@ -333,8 +147,6 @@ year={2012},
 pages={281-284},
 doi={10.1109/ICASSP.2012.6287872}}
 
-
-
 @inbook{irm,
 author = {Hummersone, Christopher and Stokes, Toby and Brookes, Tim},
 year = {2014},
@@ -342,39 +154,6 @@ pages = {349-368},
 title = {On the Ideal Ratio Mask as the Goal of Computational Auditory Scene Analysis},
 isbn = {978-3-642-55015-7},
 doi = {10.1007/978-3-642-55016-4_12}
-}
-
-@misc{pandas,
-    author       = {The pandas development team},
-    title        = {pandas-dev/pandas: Pandas},
-    year         = {2020},
-    publisher    = {Zenodo},
-    version      = {latest},
-    doi          = {10.5281/zenodo.3509134},
-}
-
-@misc{seaborn,
-    author       = {Michael Waskom and the seaborn development team},
-    title        = {mwaskom/seaborn},
-    year         = {2020},
-    publisher    = {Zenodo},
-    version      = {latest},
-    doi          = {10.5281/zenodo.592845},
-}
-
-@article{matplotlib,
-  Author    = {Hunter, J. D.},
-  Title     = {Matplotlib: A 2D graphics environment},
-  Journal   = {Computing in Science \& Engineering},
-  Volume    = {9},
-  Number    = {3},
-  Pages     = {90--95},
-  abstract  = {Matplotlib is a 2D graphics package used for Python for
-  application development, interactive scripting, and publication-quality
-  image generation across user interfaces and operating systems.},
-  publisher = {IEEE COMPUTER SOC},
-  doi       = {10.1109/MCSE.2007.55},
-  year      = 2007
 }
 
 @incollection{pytorch,
@@ -403,17 +182,6 @@ year = {2009},
 title = {A review on music source separation},
 journal = {Proceedings - 2009 IEEE Youth Conference on Information, Computing and Telecommunication, YC-ICT2009},
 doi = {10.1109/YCICT.2009.5382353}
-}
-
-@article{gabor1946,
-title={Theory of Communication},
-author={Dennis Gabor},
-year={1946},
-pages={429-457},
-volume={93},
-number={3},
-journal={Journal of Institution of Electrical Engineers},
-url={http://www.granularsynthesis.com/pdf/gabor.pdf}
 }
 
 @article{dictionary,
@@ -447,13 +215,6 @@ pages = {33-61},
 title = {Atomic decomposition by basis pursuit[J]},
 volume = {43},
 journal = {Siam Review}
-}
-
-@phdthesis{doerflerphd,
-author = {D{\"o}rfler, Monika},
-year = {2002},
-title = {Gabor analysis for a class of signals called music},
-url = {http://www.mathe.tu-freiberg.de/files/thesis/gamu_1.pdf}
 }
 
 @article{psycho1,
@@ -505,12 +266,6 @@ doi = {10.1109/TASL.2013.2239989},
 url = {https://arpi.unipi.it/retrieve/handle/11568/159584/458549/tasl.pdf}
 }
 
-@article{tftradeoff1,
-author = {Simpson, Andrew},
-year = {2015},
-title = {Time-Frequency Trade-offs for Audio Source Separation with Binary Masks}
-}
-
 @inproceedings{tftradeoff2,
   author    = {Ilya Kavalerov and
                Scott Wisdom and
@@ -526,13 +281,6 @@ title = {Time-Frequency Trade-offs for Audio Source Separation with Binary Masks
   publisher = {{IEEE}},
   year      = {2019},
   doi       = {10.1109/WASPAA.2019.8937253},
-}
-
-@misc{driedger,
-author = {Driedger, Jonathan and Müller, Meinard and Disch, Sascha},
-year = {2014},
-title = {Extending Harmonic-Percussive Separation of Audio Signals},
-url = {https://www.audiolabs-erlangen.de/content/05-fau/assistant/00-driedger/01-publications/2014_DriedgerMuellerDisch_ExtensionsHPSeparation_ISMIR.pdf}
 }
 
 @article{demucs,
@@ -651,7 +399,7 @@ doi = {10.1155/2016/6172453}
   Pages = {323--332},
   Publisher = {Springer International Publishing},
   Year = {2017},
-  booktitle = {Latent Variable Analysis and Signal Separation - 12th International Conference, {LVA/ICA} 2015, Liberec, Czech Republic, August 25-28, 2015, Proceedings},
+  booktitle = {Latent Variable Analysis and Signal Separation: 12th International Conference, {LVA/ICA} 2015, Liberec, Czech Republic, August 25-28, 2015, Proceedings},
 }
 
 @misc{otherdataset2,
@@ -742,54 +490,6 @@ doi={10.1109/ICASSP.2004.1326794}
       url={https://www.ismir2020.net/assets/img/virtual-booth-sonycsl/cUMX_paper.pdf}
 }
 
-@misc{tensorflow,
-title={ {TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
-url={https://www.tensorflow.org/},
-note={Software available from tensorflow.org},
-author={
-    Mart\'{\i}n~Abadi and
-    Ashish~Agarwal and
-    Paul~Barham and
-    Eugene~Brevdo and
-    Zhifeng~Chen and
-    Craig~Citro and
-    Greg~S.~Corrado and
-    Andy~Davis and
-    Jeffrey~Dean and
-    Matthieu~Devin and
-    Sanjay~Ghemawat and
-    Ian~Goodfellow and
-    Andrew~Harp and
-    Geoffrey~Irving and
-    Michael~Isard and
-    Yangqing Jia and
-    Rafal~Jozefowicz and
-    Lukasz~Kaiser and
-    Manjunath~Kudlur and
-    Josh~Levenberg and
-    Dandelion~Man\'{e} and
-    Rajat~Monga and
-    Sherry~Moore and
-    Derek~Murray and
-    Chris~Olah and
-    Mike~Schuster and
-    Jonathon~Shlens and
-    Benoit~Steiner and
-    Ilya~Sutskever and
-    Kunal~Talwar and
-    Paul~Tucker and
-    Vincent~Vanhoucke and
-    Vijay~Vasudevan and
-    Fernanda~Vi\'{e}gas and
-    Oriol~Vinyals and
-    Pete~Warden and
-    Martin~Wattenberg and
-    Martin~Wicke and
-    Yuan~Yu and
-    Xiaoqiang~Zheng},
-  year={2015},
-}
-
 @article{randomgrid,
   author  = {James Bergstra and Yoshua Bengio},
   title   = {Random Search for Hyper-Parameter Optimization},
@@ -811,16 +511,6 @@ address = "United Kingdom",
 edition = "6",
 pages = {203--242},
 }
-
-@article{slicq,
-author={Holighaus, Nicki and Dörfler, Monika and Velasco, Gino Angelo and Grill, Thomas},
-journal={IEEE Transactions on Audio, Speech, and Language Processing},
-title={A Framework for Invertible, Real-Time Constant-Q Transforms},
-year={2013},
-volume={21},
-number={4},
-pages={775--785},
-doi={10.1109/TASL.2012.2234114}}
 
 @article{shannon1948,
 author={C. E. {Shannon}},
@@ -996,7 +686,7 @@ doi={10.1109/JPROC.1996.503148}
 author = {Hill, Peter},
 year = {2007},
 pages = {2632--2637},
-title = {Dennis Gabor - Contributions to Communication Theory \ Signal Processing},
+title = {Dennis Gabor: Contributions to communication theory \ signal processing},
 journal = {EUROCON 2007 - The International Conference on Computer as a Tool},
 doi = {10.1109/EURCON.2007.4400546}}
 
@@ -1087,22 +777,6 @@ doi={10.1109/ITS.2006.4433420},
 url={http://www02.smt.ufrj.br/~sergioln/papers/IC33.pdf}
 }
 
-@inproceedings{essentia,
-author = {Bogdanov, Dmitry and Wack, Nicolas and G\'{o}mez, Emilia and Gulati, Sankalp and Herrera, Perfecto and Mayor, Oscar and Roma, Gerard and Salamon, Justin and Zapata, Jos\'{e} and Serra, Xavier},
-title = {ESSENTIA: An Open-Source Library for Sound and Music Analysis},
-year = {2013},
-isbn = {9781450324045},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/2502081.2502229},
-doi = {10.1145/2502081.2502229},
-booktitle = {Proceedings of the 21st ACM International Conference on Multimedia},
-pages = {855–858},
-keywords = {open source, music information retrieval, audio analysis, sound and music computing, signal processing},
-location = {Barcelona, Spain},
-series = {MM '13}
-}
-
 @inbook{frametheory,
 author = {Balazs, Peter and Holighaus, Nicki and Necciari, Thibaud and Stoeva, Diana},
 year = {2017},
@@ -1125,16 +799,6 @@ number = {1},
 pages = {1-94},
 author = {Jelena Kovačević and Amina Chebira},
 url = {infoscience.epfl.ch/record/133268/files/08_KovacevicC_F%26T.pdf}
-}
-
-@article{musicsepintro1,
-author = {Rafii, Zafar and Liutkus, Antoine and Stoter, Fabian-Robert and Mimilakis, Stylianos and Fitzgerald, Derry and Pardo, Bryan},
-year = {2018},
-pages = {1-1},
-title = {An Overview of Lead and Accompaniment Separation in Music},
-volume = {PP},
-journal = {IEEE/ACM Transactions on Audio, Speech, and Language Processing},
-doi = {10.1109/TASLP.2018.2825440}
 }
 
 @book{blind1,
@@ -1182,15 +846,6 @@ publisher = {CRC Press },
 title = {Speech Enhancement: Theory and Practice},
 isbn = {9781138075573}
 }
-
-@inproceedings{musicseptechniques1,
-author={Liutkus, Antoine and Durrieu, Jean-Louis and Daudet, Laurent and Richard, Gaël},
-booktitle={14th International Workshop on Image Analysis for Multimedia Interactive Services (WIAMIS)},
-title={An overview of informed audio source separation},
-year={2013},
-pages={1-4},
-doi={10.1109/WIAMIS.2013.6616139},
-url={https://hal.archives-ouvertes.fr/hal-00958661/document}}
 
 @article{musicseptechniques2,
 author={Vincent, Emmanuel and Bertin, Nancy and Gribonval, Remi and Bimbot, Frederic},
@@ -1357,7 +1012,7 @@ author = {Iman, Mohammadreza and Arabnia, Hamid and Branchinst, Robert},
 year = {2020},
 month = {05},
 title = {Pathways to Artificial General Intelligence: A Brief Overview of Developments and Ethical Issues via Artificial Intelligence, Machine Learning, Deep Learning, and Data Science},
-booktitle = {ICAI'20 - The 22nd Int'l Conf on Artificial Intelligence},
+booktitle = {ICAI'20: The 22nd Int'l Conf on Artificial Intelligence},
 }
 
 @article{cnns,
@@ -1520,23 +1175,6 @@ institution = {Detection and Classification of Acoustic Scenes and Events 2021},
 url = {http://dcase.community/documents/challenge2021/technical_reports/DCASE2021_Fedorishin_97_t1.pdf}
 }
 
-@inproceedings{nussl,
-author = {Ethan Manilow and Prem Seetharaman and Bryan Pardo},
-title = {The Northwestern University Source Separation Library},
-publisher = {Proceedings of the 19th International Society of Music Information Retrieval Conference ({ISMIR} 2018), Paris, France, September 23-27},
-year = {2018}
-}
-
-@inproceedings{asteroid,
-    title={Asteroid: the {PyTorch}-based audio source separation toolkit for researchers},
-    author={Manuel Pariente and Samuele Cornell and Joris Cosentino and Sunit Sivasankaran and
-            Efthymios Tzinis and Jens Heitkaemper and Michel Olvera and Fabian-Robert Stöter and
-            Mathieu Hu and Juan M. Martín-Doñas and David Ditter and Ariel Frank and Antoine Deleforge
-            and Emmanuel Vincent},
-    year={2020},
-    booktitle={Proc. Interspeech},
-}
-
 @article{fiftyyears,
   title={Fifty years of signal processing: The ieee signal processing society and its technologies 1948-1998},
   author={Nebeker, N},
@@ -1596,31 +1234,8 @@ journal = {Journal of Analysis and Testing},
 doi = {10.1007/s41664-018-0068-2}
 }
 
-@inproceedings{cupy,
-  author       = "Okuta, Ryosuke and Unno, Yuya and Nishino, Daisuke and Hido, Shohei and Loomis, Crissman",
-  title        = "CuPy: A NumPy-Compatible Library for NVIDIA GPU Calculations",
-  booktitle    = "Proceedings of Workshop on Machine Learning Systems (LearningSys) in The Thirty-first Annual Conference on Neural Information Processing Systems (NIPS)",
-  year         = "2017",
-  url          = "http://learningsys.org/nips17/assets/papers/paper_16.pdf"
-}
-
-@article{cuda,
-author = {Nickolls, John and Buck, Ian and Garland, Michael and Skadron, Kevin},
-title = {Scalable Parallel Programming with CUDA},
-journal={ACM Queue},
-volume={6},
-number={2},
-year={2008},
-pages={40--53}}
-
-@inproceedings{auraloss,
-    title={auraloss: {A}udio focused loss functions in {PyTorch}},
-    author={Steinmetz, Christian J. and Reiss, Joshua D.},
-    booktitle={Digital Music Research Network One-day Workshop (DMRN+15)},
-    year={2020}}
-
 @misc{roux2018sdr,
-      title={SDR - half-baked or well done?}, 
+      title={SDR: half-baked or well done?}, 
       author={Jonathan Le Roux and Scott Wisdom and Hakan Erdogan and John R. Hershey},
       year={2018},
       eprint={1811.02508},
@@ -1676,7 +1291,7 @@ doi = {10.1109/EUSIPCO.2016.7760548}
 
 @book{pythonscience,
 author = {Bayen, Alexandre and Kong, Qingkai and Siauw, Timmy},
-title = {Python Programming and Numerical Methods - A Guide for Engineers and Scientists},
+title = {Python Programming and Numerical Methods: A Guide for Engineers and Scientists},
 year = {2020},
 publisher = {Elsevier},
 }
@@ -1715,15 +1330,6 @@ publisher = {Apress},
 address = {USA},
 edition = {2nd},
 url = {https://git-scm.com/book/en/v2}
-}
-
-@misc{nnabla,
-      title={Neural Network Libraries: A Deep Learning Framework Designed from Engineers' Perspectives}, 
-      author={Akio Hayakawa and Masato Ishii and Yoshiyuki Kobayashi and Akira Nakamura and Takuya Narihira and Yukio Obuchi and Andrew Shin and Takuya Yashima and Kazuki Yoshiyama},
-      year={2021},
-      eprint={2102.06725},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG}
 }
 
 @article{deepcpuinf,
@@ -1788,16 +1394,178 @@ doi = {10.1371/journal.pone.0212550}
       primaryClass={stat.ML}
 }
 
-@inproceedings{wavelets,
-author={Wolf, Guy and Mallat, Stéphane and Shamma, Shihab},
-booktitle={IEEE International Workshop on Machine Learning for Signal Processing},
-title={Audio source separation with time-frequency velocities},
-year={2014},
-pages={1-6},
-doi={10.1109/MLSP.2014.6958893}}
-
 @article{mdx21,
 author = {Mitsufuji, Yuki and Fabbro, Giorgio and Uhlich, Stefan and Stöter, Fabian-Robert},
 year = {2021},
 title = {Music Demixing Challenge at ISMIR 2021}
 }
+
+@article{musicsepgood,
+author = {Cano, Estefanía and Fitzgerald, Derry and Liutkus, Antoine and Plumbley, Mark and Stöter, Fabian-Robert},
+year = {2018},
+title = {Musical source separation: an introduction},
+volume = {36},
+number = {1},
+pages = {31--40},
+journal = {IEEE Signal Processing Magazine},
+doi = {10.1109/MSP.2018.2874719}
+}
+
+@article{gabor1946,
+title={Theory of communication},
+author={Dennis Gabor},
+year={1946},
+pages={429--457},
+volume={93},
+number={3},
+journal={Journal of Institution of Electrical Engineers},
+url={http://www.granularsynthesis.com/pdf/gabor.pdf}
+}
+
+@article{tftradeoff1,
+author = {Simpson, Andrew},
+year = {2015},
+title = {Time-frequency trade-offs for audio source separation with binary masks}
+}
+
+@article{slicq,
+author={Holighaus, Nicki and Dörfler, Monika and Velasco, Gino Angelo and Grill, Thomas},
+journal={IEEE Transactions on Audio, Speech, and Language Processing},
+title={A framework for invertible, real-time constant-Q transforms},
+year={2013},
+volume={21},
+number={4},
+pages={775--785},
+doi={10.1109/TASL.2012.2234114}}
+
+@phdthesis{doerflerphd,
+author = {D{\"o}rfler, Monika},
+year = {2002},
+title = {Gabor analysis for a class of signals called music},
+url = {http://www.mathe.tu-freiberg.de/files/thesis/gamu_1.pdf},
+school = {NuHAG, University of Vienna},
+}
+
+@article{balazs,
+author = {Balazs, Peter and Doerfler, Monika and Jaillet, F and Holighaus, Nicki and Velasco, Gino Angelo},
+year = {2011},
+pages = {1481--1496},
+title = {Theory, implementation and applications of nonstationary Gabor frames},
+volume = {236},
+number = {6},
+journal = {Journal of Computational and Applied Mathematics},
+doi = {10.1016/j.cam.2011.09.011},
+url = {https://ltfat.github.io/notes/ltfatnote018.pdf}
+}
+
+@article{jbrown,
+  title={Calculation of a constant Q spectral transform},
+  author={Judith Brown},
+  journal={Journal of the Acoustical Society of America},
+  year={1991},
+  volume={89},
+  number={1},
+  pages={425--434},
+  url={https://www.ee.columbia.edu/~dpwe/papers/Brown91-cqt.pdf}
+}
+
+@article{sisec2018,
+      title={The 2018 signal separation evaluation campaign}, 
+      author={Fabian-Robert Stöter and Antoine Liutkus and Nobutaka Ito},
+      journal={LVA/ICA: Latent Variable Analysis and Signal Separation},
+      year={2018},
+      pages={293--305},
+}
+
+@article{umx,
+  doi = {10.21105/joss.01667},
+  year = {2019},
+  publisher = {The Open Journal},
+  volume = {4},
+  number = {41},
+  pages = {1667},
+  author = {Fabian-Robert Stöter and Stefan Uhlich and Antoine Liutkus and Yuki Mitsufuji},
+  title = {Open-Unmix: A reference implementation for music source separation},
+  journal = {Journal of Open Source Software},
+  url = {https://hal.inria.fr/hal-02293689/document}
+}
+
+@inproceedings{musicseptechniques1,
+author={Liutkus, Antoine and Durrieu, Jean-Louis and Daudet, Laurent and Richard, Gaël},
+booktitle={14th International Workshop on Image Analysis for Multimedia Interactive Services (WIAMIS)},
+title={An overview of informed audio source separation},
+year={2013},
+pages={1--4},
+doi={10.1109/WIAMIS.2013.6616139},
+url={https://hal.archives-ouvertes.fr/hal-00958661/document}}
+
+@article{musicsepintro1,
+  author={Z. Rafii and A. Liutkus and
+          F. R. Stöter and S. I. Mimilakis
+          and D. FitzGerald and B. Pardo},
+  journal={IEEE/ACM Transactions on Audio, Speech, and Language Processing},
+  title={An overview of lead and accompaniment separation in music},
+  year={2018},
+  volume={26},
+  number={8},
+  pages={1307--1335},
+  doi={10.1109/TASLP.2018.2825440},
+}
+
+@inproceedings{driedger,
+  author    = {Jonathan Driedger and Meinard M{\"u}ller and Sascha Disch},
+  title     = {Extending harmonic-percussive separation of audio signals},
+  booktitle = {Proceedings of the 15th International Conference on Music Information Retrieval ({ISMIR})},
+  year      = {2014},
+  pages     = {611--616},
+}
+
+@article{fitzgerald2,
+author = {Fitzgerald, Derry and Gainza, Mikel},
+year = {2010},
+title = {Single channel vocal separation using median filtering and factorisation techniques},
+volume = {4},
+number = {1},
+pages={62--73},
+journal = {ISAST Transactions on Electronic and Signal Processing}
+}
+
+@inproceedings{wavelets,
+author={Wolf, Guy and Mallat, Stéphane and Shamma, Shihab},
+booktitle={IEEE International Workshop on Machine Learning for Signal Processing},
+title={Audio source separation with time-frequency velocities},
+year={2014},
+pages={1--6},
+doi={10.1109/MLSP.2014.6958893}}
+
+@article{musdb18hq,
+  author       = {Rafii, Zafar and
+                  Liutkus, Antoine and
+                  Stöter, Fabian-Robert and
+                  Mimilakis, Stylianos Ioannis and
+                  Bittner, Rachel},
+  title        = {MUSDB18-HQ: an uncompressed version of MUSDB18},
+  year         = {2019},
+  doi          = {10.5281/zenodo.3338373},
+}
+
+@article{bss,
+author = {Vincent, Emmanuel and Gribonval, Rémi and Févotte, Cédric},
+year = {2006},
+pages = {1462--1469},
+title = {Performance measurement in blind audio source separation},
+volume = {14},
+number = {4},
+journal = {IEEE Transactions on Audio, Speech, and Language Processing},
+doi = {10.1109/TSA.2005.858005}
+}
+
+@article{cola,
+author={Griffin, D. and Jae Lim},
+journal={IEEE Transactions on Acoustics, Speech, and Signal Processing},
+title={Signal estimation from modified short-time Fourier transform},
+year={1984},
+volume={32},
+number={2},
+pages={236--243},
+doi={10.1109/TASSP.1984.1164317}}
