--- a/latex/report.tex
+++ b/latex/report.tex
@@ -71,6 +71,11 @@
 	\clearpage
 }
 
+\DeclareCiteCommand{\secondaryciteauthor}{}{\printtext[bibhyperref]{\printnames{labelname}}}{}{}
+\DeclareCiteCommand{\secondaryciteyear}{}{\bibhyperref{\printdate}}{\multicitedelim}{}
+\newcommand{\secondarycitedirect}[2]{\secondaryciteauthor{#1} (\secondaryciteyear{#1}, cited in \secondaryciteauthor{#2}, \secondaryciteyear{#2})}
+\newcommand{\secondaryciteindirect}[2]{(\secondaryciteauthor{#1}, \secondaryciteyear{#1}, cited in \secondaryciteauthor{#2}, \secondaryciteyear{#2})}
+
 \title{\ThesisTitle}
 
 \author{\vspace{1em}\\Sevag Hanssian \\
@@ -89,7 +94,7 @@
 
 \newpagefill
 
-\subfile{ch0_abstract_acknowledgement.tex}
+\subfile{ch0.tex}
 
 \newpagefill
 
@@ -103,23 +108,23 @@
 
 \newpagefill
 
-\subfile{ch1_introduction.tex}
+\subfile{ch1.tex}
 
 \newpagefill
 
-\subfile{ch2_background.tex}
+\subfile{ch2.tex}
 
 \newpagefill
 
-\subfile{ch3_methodology.tex}
+\subfile{ch3.tex}
 
 \newpagefill
 
-\subfile{ch4_experiment.tex}
+\subfile{ch4.tex}
 
 \newpagefill
 
-\subfile{ch5_conclusion.tex}
+\subfile{ch5.tex}
 
 \newpagefill
 
